frontend/src/components/SpotDetail/SpotDetail.css
.spot-card-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin: 75px 0 25px 25px
}

.spot-card li {
    list-style: none;
    margin: 10px 0 10px 0;
}

.spot-card-top {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin: 10px 25px 0px 0px;
    max-width: 950px;
}

.spot-card-top h1 {
    margin-bottom: 5px;
}

.spot-card-top-ratings-location {
    display: flex;
    flex-direction: row;
}

.spot-card-top-image {
    width: 900px;
    height: 650px;
}

.spot-card-top-image>img {
    border-radius: 25px;
    width: 100%;
    height: 100%;
    margin: 25px 0px 25px 0px;
}

.edit-button {
    width: 150px;
    height: 50px;
    margin-bottom: 10px;
}

.spot-card-bottom {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 880px;
    max-width: 950px;
    margin: 50px 25px 0 0;
    padding-bottom: 50px;
}

.spot-card-bottom-left {
    display: flex;
    flex-direction: column;
    padding-bottom: 32px;
    width: 85%;
}

.spot-card-bottom-left-hosted-by {
    padding: 0 0 24px 0;
    border-bottom: 1px solid rgb(164, 126, 78);
}

.spot-card-bottom-left-hosted-by>h1 {
    margin: 5px 0 5px 0;
}

.spot-card-bottom-left-img img {
    margin-right: 10px;
    padding-right: 10px;
}

.spot-card-bottom-air-cover-info {
    padding: 0px 0 24px 0;
    border-bottom: 1px solid rgb(164, 126, 78);
}

.spot-card-bottom-left>h2 {
    padding: 12px 0 12px 0
}

.spot-card-bottom-left-ratings {
    margin-bottom: 5px;
    padding-top: 32px;
    border-top: 1px solid rgb(164, 126, 78);
}

.spot-card-bottom-left-individual-reviews {
    padding: 10px 0 0 0;
}

.spot-card-bottom-left>h1 {
    margin-top: 0;
    margin-bottom: 0;
}

.spot-card-bottom-left>h3 {
    display: flex;
    flex-direction: row;
    text-decoration: underline;
    padding-bottom: 25px;
}

.spot-card-bottom-right {
    display: flex;
    flex-direction: column;
    padding: 20px;
    gap: 15px;
    border: 1px solid rgb(164, 126, 78);
    box-shadow: 5px 5px 0px rgb(164, 126, 78);
    border-radius: 25px;
    width: 350px;
    height: 350px;
}

.container-price-rating-stars {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.spot-card-bottom-right-price {
    font-weight: bold;
}

.spot-card-bottom-right-pricing {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 10px;
    padding-bottom: 24px;
    border-bottom: 1px solid rgb(164, 126, 78);
}

.bottom-description {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
}

.bottom-prices {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    row-gap: 10px;
}

.spot-card-bottom-right-book {
    margin-top: 10px;
    font-weight: bold;
}

.bottom-total-price {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-bottom: 24px;
    border-bottom: 1px solid rgb(164, 126, 78);
}

